# ufomath

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
1stparty/: CMakeLists.txt
1stparty/ufoutility/: ufoutility.cmake
cmake/: Math-config.cmake.in  ufomathConfig.cmake.in
docs/: CMakeLists.txt
include/ufo/math/: mat.hpp  mat2x2.hpp  mat3x3.hpp  mat4x4.hpp  math.hpp  numbers.hpp  pose.hpp  pose2.hpp  pose3.hpp  pose6.hpp  quat.hpp  trans.hpp  trans2.hpp  trans3.hpp  transform.hpp  transform2.hpp  transform3.hpp  util.hpp  utility.hpp  vec.hpp  vec1.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/ufo/math/detail/: mat.hpp  mat_fun.hpp  pose.hpp  pose_fun.hpp  quat.hpp  quat_fun.hpp  trans.hpp  trans_fun.hpp  transform.hpp  transform_fun.hpp  vec.hpp  vec_fun.hpp
tests/: CMakeLists.txt  mat2x2_test.cpp  pose3_test.cpp  vec2_test.cpp  vec3_test.cpp
